force-app/main/default/objects/RGC_Data_Assets__c/fields/Uploaded_to_Browsers__c.field-meta.xml
<CustomField>
    <fullName>Uploaded_to_Browsers__c</fullName>
    <label>Uploaded to Browsers</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
            <value>
                <fullName>Not Started</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>