force-app/main/default/objects/RGC_Data_Assets__c/fields/Vetted_to_Production_Status__c.field-meta.xml
<CustomField>
    <fullName>Vetted_to_Production_Status__c</fullName>
    <label>Vetted to Production Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending Start</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Paused</fullName>
            </value>
            <value>
                <fullName>Pending Registration</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>