force-app/main/default/objects/RGC_Data_Assets__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Production_Asset_Type__c</columns>
    <columns>RGC_Collaboration_Detail__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>