force-app/main/default/objects/RGC_Data_Assets__c/listViews/CI_Matrices_High_Priority.listView-meta.xml
<ListView>
    <fullName>CI_Matrices_High_Priority</fullName>
    <columns>NAME</columns>
    <columns>Priority_Flag__c</columns>
    <columns>Clinical_Informatics_Lead__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Matrix_Priority__c</field>
        <operation>equals</operation>
        <value>High,Medium</value>
    </filters>
    <filters>
        <field>Phenotype_Matrices__c</field>
        <operation>equals</operation>
        <value>In Progress</value>
    </filters>
    <label>CI Matrices-High/Med Priority</label>
</ListView>